# Endstate

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  IDEA.md  README.md  docker-compose.yml  main.py  pyproject.toml  test_kg.py  test_stats.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  config.py  main.py
backend/db/: __init__.py  neo4j_client.py
backend/examples/: basic_usage.py
backend/llm/: __init__.py  graph_transformer.py  mock_provider.py  provider.py
backend/schemas/: __init__.py  base.py  skill_graph.py
backend/services/: __init__.py  agent_prompts.py  assessment_service.py  chat_service.py  evaluation_service.py  extraction_service.py  knowledge_graph.py  lesson_service.py  opik_client.py  project_migration.py  project_service.py  prompt_registry.py  remediation_service.py  summary_cache.py  summary_extractor.py  task_registry.py  utils.py
db/: README.md  __init__.py  client.py  container.py  example.py  exceptions.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/alexdoc-donotdelete/: chatbox.md  tech.md
frontend/src/: App.vue
scripts/: cleanup_docker.py  cleanup_legacy_summaries.py  cleanup_sessions.py  clear_graph.py  clear_graph.sh  debug_neo4j_direct.py  merge_graph.py  seed.sh  seed_graph.py  test_mock_provider.py  test_project_cycle.py  verify_system_state.py
tests/: conftest.py
tests/db/: __init__.py  conftest.py  test_client.py  test_container.py  test_integration.py
tests/integration/: test_full_flow_mock_llm.py  test_services.py
(+28 files in other folders)
