[project]
name = "endstate"
version = "0.1.0"
description = "Knowledge-graph powered learning platform with interactive AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-neo4j>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
viz = [
    "neo4j-viz>=0.1.0",
    "graphdatascience>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

